# genbu-beta

./: .deepsource.toml  .gitignore  Cargo.toml  Insomnia_2023-03-25.json  deny.toml  index.html  sqlx-data.json  start_collabora.sh  start_db.sh  todo.txt
auth/: Cargo.toml
auth/src/: authn.rs
connectors/: .env  Cargo.toml  clear_db.sh  start_db.sh
connectors/migrations/: 20221009164548_users.down.sql
connectors/src/: memory.rs  types.rs
connectors/src/postgres/: mod.rs
connectors/src/s3/: mod.rs
genbu/: Cargo.toml  docker-compose.yml  sqlx-data.json  start_db.sh  start_s3.sh
genbu/config/: agent.yaml  datasources.yaml
genbu/migrations/: 20230103205114_upload_lease.up.sql  20230123173140_file.up.sql  20230221183109_create_group.down.sql  20230221183109_create_group.up.sql  20230323161128_add_access_tokens.up.sql
genbu/src/: lib.rs  main.rs
genbu/src/connectors/: memory.rs
genbu/src/connectors/postgres/: access_token.rs  file.rs  mod.rs
genbu/src/connectors/s3/: database.rs  filesystem.rs  mod.rs  storage.rs
genbu/src/handler/files/: download.rs  mod.rs  upload.rs  userfiles.rs  wopi.rs
genbu/src/handler/users/: auth.rs  mod.rs
genbu/src/server/: apidoc.rs  builder.rs
genbu/src/server/middlewares/: auth.rs
genbu/src/server/routes/: mod.rs
genbu/src/server/routes/files/: mod.rs  multipart_upload.rs  upload.rs  userfiles.rs  wopi.rs
genbu/src/server/routes/users/: mod.rs
genbu/src/stores/: mod.rs  users.rs
genbu/src/stores/files/: access_token.rs  database.rs  filesystem.rs  mod.rs  storage.rs
migrations/: 20221009164548_users.up.sql  20221227200147_setup.down.sql  20221227200156_users.down.sql  20221227200156_users.up.sql  20230103205114_upload_lease.down.sql  20230103205114_upload_lease.up.sql  20230323161128_add_access_tokens.down.sql  20230325232726_add_size_to_dbfile.down.sql  20230325232726_add_size_to_dbfile.up.sql
server/: Cargo.toml
server/src/: apidoc.rs  builder.rs
server/src/middlewares/: auth.rs
server/src/routes/: mod.rs
server/src/routes/files/: mod.rs  multipart_upload.rs  upload.rs
server/src/routes/users/: mod.rs
src/: lib.rs  main.rs
src/connectors/: memory.rs  mod.rs  types.rs
src/connectors/postgres/: mod.rs
src/connectors/s3/: mod.rs
src/server/: apidoc.rs  builder.rs  mod.rs
src/server/routes/files/: mod.rs  multipart_upload.rs  upload.rs
src/server/routes/users/: mod.rs
src/stores/: mod.rs  stores.rs  users.rs
src/stores/files/: database.rs  mod.rs  storage.rs
stores/: Cargo.toml
stores/src/: files.rs  lib.rs  stores.rs  test.polar  users.rs  util.rs
stores/src/files/: database.rs  file_storage.rs
tests/: Cargo.toml  common.rs  upload.rs  user.rs
