[package]
name = "genbu-auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["alloc"] }
http = { version = "0.2.8", optional = true }
jsonwebtoken = "8.1.1"
password-hash = { version = "0.5.0", features = ["alloc", "std"] }
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
time = "0.3.17"
tracing = "0.1.37"
unicode-normalization = "0.1.22"
uuid = "1.2.2"

[features]
default = ["http"]
production = ["argon2/zeroize"]
http = ["dep:http"]
