[package]
name = "genbu-default-connectors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-types = "0.52.0"
genbu-stores = { version = "0.1.0", path = "../stores" }
http = "0.2.8"
parking_lot = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "migrate", "macros", "time", "tls"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["rt"] }
tracing = "0.1.37"
