[package]
name = "genbu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genbu-axum-server = { version = "0.1.0", path = "../server/" }
genbu-default-connectors = { version = "0.1.0", path = "../connectors/" }
genbu-stores = { version = "0.1.0", path = "../stores/" }
tokio = { version = "1.21.2", features = ["full"] }

[features]
production = ["genbu-axum-server/production"]
