[package]
name = "genbu-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.57"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-types = "0.52.0"
axum = { version = "0.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.4", features = ["cookie", "spa"] }
bytes = "1.3.0"
genbu-auth = { version = "0.1.0", features = ["http"], path = "../auth" }
http = "0.2.8"
hyper = "0.14.20"
lettre = { version = "0.10.1", features = ["tokio1-rustls-tls", "tracing", "builder", "tokio1", "hostname", "smtp-transport"], default-features = false }
oso = { version = "0.26.3", features = ["uuid-10"] }
parking_lot = "0.12.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "migrate", "macros", "time", "tls"] }
tempfile = "3.3.0"
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["auth", "trace", "sensitive-headers", "metrics", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "2.4.2", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }

[features]
production = ["genbu-auth/production", "axum/http2", "tracing-subscriber/parking_lot"]

[[bin]]
name = "genbu"
path = "src/main.rs"

[dev-dependencies]
http-body = "0.4.5"
