[package]
name = "genbu-stores"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.3.0"
oso = { version = "0.26.3", features = ["uuid-10"] }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["serde", "formatting", "parsing"] }
utoipa = { version = "2.4.2", default-features = false, optional = true }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }

[features]
openapi = ["dep:utoipa"]
