[package]
name = "genbu-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
axum = "0.6.0"
genbu-server = { path = "../" }
http-body = "0.4.5"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
futures = "0.3.25"

[[test]]
name = "user_tests"
path = "user.rs"
