[package]
name = "genbu-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
axum = "0.6.10"
futures = "0.3.27"
genbu-server = { path = "../genbu" }
http-body = "0.4.5"
reqwest = { version = "0.11.13", features = ["multipart", "json", "cookie_store", "rustls", "rustls-tls"], default-features = false }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[[test]]
name = "user_tests"
path = "user.rs"

[[test]]
name = "upload_tests"
path = "upload.rs"
